fix: project card title being cut off

--- a/src/sections/projects/components/project-card/index.module.scss
+++ b/src/sections/projects/components/project-card/index.module.scss
@@ -37,7 +37,7 @@
     position: absolute;
     top: 252px;
     width: 90%;
-    height: 45px;
+    height: 50px;
     padding: 0 30px;
     text-align: center;
     overflow: hidden;
